<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:id="@+id/main"
    android:padding="32dp">

    <!-- Logo -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_luminar"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="16dp" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <!-- Email -->
    <EditText
        android:id="@+id/edtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Email"
        android:background="@drawable/rounded_box"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#A9A9A9"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp" />

    <!-- Password -->
    <EditText
        android:id="@+id/edtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Password"
        android:background="@drawable/rounded_box"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#A9A9A9"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp" />

    <!-- Access button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingVertical="10dp" />

</LinearLayout>
