<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/luminar_bg"
    android:padding="32dp">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Task"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/luminar_text"
        android:layout_marginBottom="32dp" />

    <!-- Name -->
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/task_name"
        android:background="@drawable/rounded_box"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#A9A9A9"
        android:textColor="@color/luminar_text"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp" />

    <!-- Notes -->
    <EditText
        android:id="@+id/edtNotes"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_box"
        android:hint="@string/notes"
        android:inputType="textTaskNotes"
        android:paddingHorizontal="16dp"
        android:textColor="@color/luminar_text"
        android:textColorHint="#A9A9A9" />

    <EditText
        android:id="@+id/edtGoalDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/goal_date"
        android:background="@drawable/rounded_box"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#A9A9A9"
        android:textColor="@color/luminar_text"
        android:inputType="textGoalDate"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtStartTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_box"
                android:hint="@string/start_time"
                android:inputType="textStartTime"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/luminar_text"
                android:textColorHint="#A9A9A9" />

            <EditText
                android:id="@+id/edtEndTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_box"
                android:hint="@string/end_time"
                android:inputType="textEndTime"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/luminar_text"
                android:textColorHint="#A9A9A9" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/edtFrequency"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/frequency"
        android:background="@drawable/rounded_box"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#A9A9A9"
        android:textColor="@color/luminar_text"
        android:inputType="textFrequency"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edtReminder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/reminder"
        android:background="@drawable/rounded_box"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#A9A9A9"
        android:textColor="@color/luminar_text"
        android:inputType="textReminder"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edtPickColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/pick_color"
        android:background="@drawable/rounded_box"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#A9A9A9"
        android:textColor="@color/luminar_text"
        android:inputType="textPickColor"
        android:layout_marginBottom="16dp" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/luminar_button"
        android:paddingVertical="10dp"
        android:text="@string/save_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
