<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <!-- Center content takes available space -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <ImageView
            android:layout_width="209dp"
            android:layout_height="186dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/welcome_title"
            android:src="@drawable/logo_luminar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_build_good_habits_and_keep_good_routines"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginHorizontal="24dp" />
    </LinearLayout>

    <!-- Bottom bar with Next -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnNextWelcome"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box"
            android:text="@string/Continue"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
